# rc-educative

./: .gitignore  README.md  pyproject.toml
rc_educative/: __init__.py  __main__.py  decorating.py  decorators.py  functions.py
rc_educative/kubernetes/: multimap.yaml  test-conf.yaml
rc_educative/kubernetes/StatefulSets/: README.md  app.yml  az-sc.yaml  local-pv1.yaml  local-pv2.yaml  local-pv3.yaml  local-pvc1.yaml  sts.yaml
tests/: decorators_test.py
