[tool.poetry]
name = "rc-educative-python"
version = "0.0.0"
description = "Python training on Educative.io"
authors = [
    "Javier Rico <jvirico@gmail.com>",
]
include = [
    "LICENSE",
]

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 120

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
